--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,18 @@
 {
-  "compileOnSave": false,
+  "compileOnSave": true,
+  "exclude": [
+    "demo",
+    "node_modules"
+  ],
+  "files": [
+    "./src/bootstrap-form-validation.module.ts"
+  ],
   "compilerOptions": {
-    "outDir": "./dist/out-tsc",
+    "outDir": "./dist",
     "sourceMap": true,
     "declaration": true,
     "moduleResolution": "node",
+    "module": "commonjs",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
