Remove build process and publish uncompiled source

--- a/demo/package.json
+++ b/demo/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "ng-bootstrap-form-validation",
+  "name": "bootstrap-form-validation",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "npm run clean && ngc -p ./tsconfig.aot.json",
-    "clean": "rimraf ./dist"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "private": false,
+  "private": true,
   "dependencies": {
     "@angular/common": "^2.4.0",
     "@angular/compiler": "^2.4.0",
@@ -32,10 +36,11 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
+    "rimraf": "^2.6.1",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
     "typescript": "~2.0.0"
