Fix AOT issue by adding peer dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-bootstrap-form-validation",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "build": "npm run clean && ngc -p ./tsconfig.aot.json",
@@ -8,18 +8,11 @@
   },
   "private": false,
   "dependencies": {
+  },
+  "peerDependencies": {
     "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
     "@angular/core": "^2.4.0",
-    "@angular/forms": "^2.4.0",
-    "@angular/http": "^2.4.0",
-    "@angular/platform-browser": "^2.4.0",
-    "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/router": "^3.4.0",
-    "bootstrap-sass": "^3.3.7",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6"
+    "@angular/forms": "^2.4.0"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-rc.1",
