--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
   "name": "ng-bootstrap-form-validation",
-  "version": "0.0.8",
+  "version": "1.0.1",
   "description": "README, an Angular library",
   "main": "dist/ng-bootstrap-form-validation.bundle.js",
   "scripts": {
     "init": "ngl i",
-    "build": "npm run build:copy && npm run build:aot && npm run build:pack && npm run copy:package",
+    "build": "npm run build:copy && npm run build:aot && npm run build:pack",
     "build:aot": "ngc -p tsconfig.build.json",
     "build:copy": "node ./tasks/copy-build && node ./tasks/inline-resources",
-    "build:link": "npm run unlink && npm run build && npm run link",
     "build:pack": "webpack --config ./webpack/webpack.build.js",
-    "copy:package": "copyfiles -f src/package.json dist",
     "g": "node ./node_modules/angular-librarian",
-    "link": "cd dist && npm link && cd ..",
     "lint": "tslint ./src/**/*.ts",
     "postbuild": "rimraf build",
     "prebuild": "rimraf dist",
     "pretagVersion": "npm run build",
     "start": "webpack-dev-server --config ./webpack/webpack.dev.js",
     "tagVersion": "np",
-    "test": "node ./tasks/test",
-    "unlink": "cd dist && npm unlink && cd .."
+    "test": "node ./tasks/test"
   },
   "keywords": [],
   "author": "",
