--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-bootstrap-form-validation",
-  "version": "1.0.1",
-  "description": "README, an Angular library",
+  "version": "1.0.2",
+  "description": "An Angular module that makes Bootstrap form validation easy.",
   "main": "dist/ng-bootstrap-form-validation.bundle.js",
   "scripts": {
     "init": "ngl i",
