--- a/package.json
+++ b/package.json
@@ -1,82 +1,55 @@
 {
   "name": "ng-bootstrap-form-validation",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "An Angular module that makes Bootstrap form validation easy.",
-  "main": "dist/ng-bootstrap-form-validation.bundle.js",
-  "scripts": {
-    "init": "ngl i",
-    "build": "npm run build:copy && npm run build:aot && npm run build:pack",
-    "build:aot": "ngc -p tsconfig.build.json",
-    "build:copy": "node ./tasks/copy-build && node ./tasks/inline-resources",
-    "build:pack": "webpack --config ./webpack/webpack.build.js",
-    "g": "node ./node_modules/angular-librarian",
-    "lint": "tslint ./src/**/*.ts",
-    "postbuild": "rimraf build",
-    "prebuild": "rimraf dist",
-    "pretagVersion": "npm run build",
-    "start": "webpack-dev-server --config ./webpack/webpack.dev.js",
-    "tagVersion": "np",
-    "test": "node ./tasks/test"
-  },
+  "license": "MIT",
   "keywords": ["angular", "bootstrap", "form", "validation"],
   "author": "Kevin Kipp",
-  "license": "MIT",
-  "devDependencies": {
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "angular-librarian": "1.0.0-alpha.12",
-    "angular2-template-loader": "0.6.0",
-    "awesome-typescript-loader": "^3.0.0",
-    "codelyzer": "~2.0.0-beta.1",
-    "copyfiles": "^1.2.0",
-    "css-loader": "^0.26.1",
-    "file-loader": "^0.8.5",
-    "fs-extra": "^2.1.2",
-    "html-webpack-plugin": "^2.19.0",
-    "istanbul-instrumenter-loader": "^1.2.0",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
-    "node-sass": "^4.1.1",
-    "np": "^2.12.0",
-    "phantomjs-prebuilt": "^2.1.7",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.3",
-    "sass-loader": "^4.0.1",
-    "source-map-loader": "^0.1.5",
-    "style-loader": "^0.13.1",
-    "tslint": "^4.0.2",
-    "tslint-loader": "^3.3.0",
-    "typescript": "~2.2.1",
-    "typings": "^0.8.1",
-    "url-loader": "^0.5.7",
-    "webpack": "2.2.0-rc.3",
-    "webpack-dev-server": "2.2.0-rc.0",
-    "webpack-merge": "^0.14.0",
-    "webpack-node-externals": "^1.5.4"
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "packagr": "ng-packagr -p ng-package.json",
+    "publish": "npm publish dist"
   },
-  "jsnext:main": "dist/ng-bootstrap-form-validation.module.js",
-  "types": "dist/index.d.ts",
+  "private": false,
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/animations": "^4.2.4",
+    "@angular/common": "^4.2.4",
+    "@angular/compiler": "^4.2.4",
+    "@angular/core": "^4.2.4",
+    "@angular/forms": "^4.2.4",
+    "@angular/http": "^4.2.4",
+    "@angular/platform-browser": "^4.2.4",
+    "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
-    "rxjs": "^5.0.1",
-    "zone.js": "^0.8.0"
+    "rxjs": "^5.4.2",
+    "zone.js": "^0.8.14"
   },
-  "repository": {
-    "url": "https://github.com/third774/ng-bootstrap-form-validation"
+  "devDependencies": {
+    "@angular/cli": "1.3.2",
+    "@angular/compiler-cli": "^4.2.4",
+    "@angular/language-service": "^4.2.4",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~3.1.1",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^1.2.1",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.3.2",
+    "typescript": "~2.3.3"
   }
 }
