Update package.json and package-lock.json files

--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "tagVersion": "np",
     "test": "node ./tasks/test"
   },
-  "keywords": ["angular", "bootstrap", "form", "validation"],
+  "keywords": [
+    "angular",
+    "bootstrap",
+    "form",
+    "validation"
+  ],
   "author": "Kevin Kipp",
   "license": "MIT",
   "devDependencies": {
