Add and run prettier & script

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "packagr": "ng-packagr -p ng-package.json"
+    "packagr": "ng-packagr -p ng-package.json",
+    "pretty": "prettier --write \"src/**/*.ts\""
   },
   "private": false,
   "dependencies": {
@@ -54,6 +55,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^1.2.1",
+    "prettier": "^1.7.4",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
