Move public_api.ts into src/lib

--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "packagr": "ng-packagr -p ng-package.json",
-    "pretty": "prettier --write \"src/**/*.ts\""
+    "clean": "rimraf dist && rimraf .ng_build",
+    "pretty": "prettier --write \"**/*.ts\"",
+    "precommit": "npm run pretty"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run pretty",
+      "git add"
+    ]
   },
   "private": false,
   "dependencies": {
@@ -46,6 +54,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.1.1",
+    "husky": "^0.14.3",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -54,9 +63,11 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lint-staged": "^4.2.3",
     "ng-packagr": "^1.2.1",
     "prettier": "^1.7.4",
     "protractor": "~5.1.2",
+    "rimraf": "^2.6.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
