--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "angular-font-awesome": "^2.3.7",
     "codelyzer": "~3.1.1",
     "husky": "^0.14.3",
     "jasmine-core": "~2.6.2",
