--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "lint-staged": "^4.2.3",
     "ng-packagr": "^2.0.0-rc.8",
+    "ng2-mock-component": "^0.1.0",
     "prettier": "^1.7.4",
     "protractor": "~5.1.2",
     "rimraf": "^2.6.2",
