--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@angular/router": "^6.0.5"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "~6.0.5",
     "@angular/language-service": "~6.0.5",
@@ -89,7 +90,6 @@
     "rimraf": "^2.6.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.5.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "typescript": "^2.7.2"
   }
 }
