change project type for angular6 angular.json file

--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
     "ng-bootstrap-form-validation": {
       "root": "",
       "sourceRoot": "src",
-      "projectType": "application",
+      "projectType": "library",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
