--- a/package.json
+++ b/package.json
@@ -47,6 +47,19 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+
+    "@angular/animations": "^6.1.4",
+    "@angular/common": "^6.1.4",
+    "@angular/compiler": "^6.1.4",
+    "@angular/core": "^6.1.4",
+    "@angular/forms": "^6.1.4",
+    "@angular/http": "^6.1.4",
+    "@angular/platform-browser": "^6.1.4",
+    "@angular/platform-browser-dynamic": "^6.1.4",
+    "@angular/router": "^6.1.4",
+    "core-js": "^2.4.1",
+    "rxjs": "^6.2.2",
+    "zone.js": "~0.8.26",
     "@angular-devkit/build-angular": "~0.7.0",
     "@angular/cli": "^6.1.4",
     "@angular/compiler-cli": "^6.1.4",
