--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
+    "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -15,7 +17,13 @@
       "es2017",
       "dom"
     ],
-    "module": "es2015",
-    "baseUrl": "./"
+    "paths": {
+      "ng-bootstrap-form-validation": [
+        "dist/ng-bootstrap-form-validation"
+      ],
+      "ng-bootstrap-form-validation/*": [
+        "dist/ng-bootstrap-form-validation/*"
+      ]
+    }
   }
 }
