--- a/angular.json
+++ b/angular.json
@@ -3,30 +3,40 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-bootstrap-form-validation": {
+    "ngx-bootstrap-form-validation": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
+      "prefix": "app",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss"
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist",
+            "outputPath": "dist/ngx-bootstrap-form-validation",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
+            "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/assets",
-              "src/favicon.ico"
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
           "configurations": {
             "production": {
+              "fileReplacements": [{
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -35,47 +45,41 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ]
+              "buildOptimizer": true
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-bootstrap-form-validation:build"
+            "browserTarget": "ngx-bootstrap-form-validation:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng-bootstrap-form-validation:build:production"
+              "browserTarget": "ngx-bootstrap-form-validation:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-bootstrap-form-validation:build"
+            "browserTarget": "ngx-bootstrap-form-validation:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
-            "karmaConfig": "./karma.conf.js",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
-            "scripts": [],
+            "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
+            "scripts": [],
             "assets": [
-              "src/assets",
-              "src/favicon.ico"
+              "src/favicon.ico",
+              "src/assets"
             ]
           }
         },
@@ -93,23 +97,65 @@
         }
       }
     },
-    "ng-bootstrap-form-validation-e2e": {
-      "root": "e2e",
-      "sourceRoot": "e2e",
+    "ngx-bootstrap-form-validation-e2e": {
+      "root": "e2e/",
       "projectType": "application",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "ng-bootstrap-form-validation:serve"
+            "protractorConfig": "e2e/protractor.conf.js",
+            "devServerTarget": "ngx-bootstrap-form-validation:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "ngx-bootstrap-form-validation:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "ng-bootstrap-form-validation": {
+      "root": "projects/ng-bootstrap-form-validation",
+      "sourceRoot": "projects/ng-bootstrap-form-validation/src",
+      "projectType": "library",
+      "prefix": "bfv",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ng-bootstrap-form-validation/tsconfig.lib.json",
+            "project": "projects/ng-bootstrap-form-validation/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project": "projects/ng-bootstrap-form-validation/ng-package.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ng-bootstrap-form-validation/src/test.ts",
+            "tsConfig": "projects/ng-bootstrap-form-validation/tsconfig.spec.json",
+            "karmaConfig": "projects/ng-bootstrap-form-validation/karma.conf.js"
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "e2e/tsconfig.e2e.json"
+              "projects/ng-bootstrap-form-validation/tsconfig.lib.json",
+              "projects/ng-bootstrap-form-validation/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -119,14 +165,5 @@
       }
     }
   },
-  "defaultProject": "ng-bootstrap-form-validation",
-  "schematics": {
-    "@schematics/angular:component": {
-      "prefix": "app",
-      "styleext": "css"
-    },
-    "@schematics/angular:directive": {
-      "prefix": "app"
-    }
-  }
+  "defaultProject": "ngx-bootstrap-form-validation"
 }
