--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
   "name": "ng-bootstrap-form-validation",
   "version": "2.1.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "clean": "rimraf dist && rimraf .ng_build",
+    "pretty": "prettier --write \"**/*.ts\"",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run pretty",
+      "git add"
+    ]
+  },
   "description": "An Angular module that makes Bootstrap form validation easy.",
   "license": "MIT",
   "keywords": [
@@ -13,58 +30,28 @@
   "repository": {
     "url": "https://github.com/third774/ng-bootstrap-form-validation"
   },
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "packagr": "ng-packagr -p ng-package.json",
-    "clean": "rimraf dist && rimraf .ng_build",
-    "pretty": "prettier --write \"**/*.ts\"",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "npm run pretty",
-      "git add"
-    ]
-  },
-  "private": false,
-  "peerDependencies": {
-    "@angular/animations": "^6.1.4",
-    "@angular/common": "^6.1.4",
-    "@angular/compiler": "^6.1.4",
-    "@angular/core": "^6.1.4",
-    "@angular/forms": "^6.1.4",
-    "@angular/http": "^6.1.4",
-    "@angular/platform-browser": "^6.1.4",
-    "@angular/platform-browser-dynamic": "^6.1.4",
-    "@angular/router": "^6.1.4",
-    "core-js": "^2.4.1",
-    "rxjs": "^6.2.2",
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^6.1.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
+    "core-js": "^2.5.4",
+    "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-
-    "@angular/animations": "^6.1.4",
-    "@angular/common": "^6.1.4",
-    "@angular/compiler": "^6.1.4",
-    "@angular/core": "^6.1.4",
-    "@angular/forms": "^6.1.4",
-    "@angular/http": "^6.1.4",
-    "@angular/platform-browser": "^6.1.4",
-    "@angular/platform-browser-dynamic": "^6.1.4",
-    "@angular/router": "^6.1.4",
-    "core-js": "^2.4.1",
-    "rxjs": "^6.2.2",
-    "zone.js": "~0.8.26",
     "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "^6.1.4",
-    "@angular/compiler-cli": "^6.1.4",
-    "@angular/language-service": "^6.1.4",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-ng-packagr": "~0.7.0",
+    "@angular/cli": "~6.1.5",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/language-service": "^6.1.0",
+    "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
@@ -73,18 +60,18 @@
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lint-staged": "^7.2.2",
-    "ng-packagr": "^4.1.0",
+    "ng-packagr": "^3.0.0",
     "ng2-mock-component": "^0.1.1",
     "prettier": "^1.14.2",
     "protractor": "~5.4.0",
-    "rimraf": "^2.6.2",
     "ts-node": "~5.0.1",
+    "tsickle": ">=0.29.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.9.2"
+    "typescript": "~2.7.2"
   }
 }
