--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - 8.9.1
 script: ng build --project ng-bootstrap-form-validation
-before_deploy: scripts/travis-deploy-setup.sh && cd dist/ng-bootstrap-form-validation
+before_deploy: node ./scripts/updateVersion && cd dist/ng-bootstrap-form-validation
 deploy:
   - provider: npm
     skip_cleanup: true
