Update to Angular version 9.1.12

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ng-bootstrap-form-validation",
-  "version": "5.0.0",
+  "version": "9.0.0",
   "engine": {
     "node": ">=10.0.0"
   },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -35,28 +35,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.7",
-    "@angular/common": "^8.2.7",
-    "@angular/compiler": "^8.2.7",
-    "@angular/core": "^8.2.7",
-    "@angular/forms": "^8.2.7",
-    "@angular/platform-browser": "^8.2.7",
-    "@angular/platform-browser-dynamic": "^8.2.7",
-    "@angular/router": "^8.2.7",
+    "@angular/animations": "^9.1.12",
+    "@angular/common": "^9.1.12",
+    "@angular/compiler": "^9.1.12",
+    "@angular/core": "^9.1.12",
+    "@angular/forms": "^9.1.12",
+    "@angular/platform-browser": "^9.1.12",
+    "@angular/platform-browser-dynamic": "^9.1.12",
+    "@angular/router": "^9.1.12",
     "core-js": "^2.5.4",
-    "rxjs": "^6.5.3",
-    "zone.js": "~0.9.1"
+    "rxjs": "^6.6.3",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.5",
-    "@angular-devkit/build-ng-packagr": "~0.803.5",
-    "@angular/cli": "~8.3.5",
-    "@angular/compiler-cli": "^8.2.7",
-    "@angular/language-service": "^8.2.7",
+    "@angular-devkit/build-angular": "~0.901.12",
+    "@angular-devkit/build-ng-packagr": "~0.901.12",
+    "@angular/cli": "~9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
+    "@angular/language-service": "^9.1.12",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "husky": "^0.14.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -66,14 +67,12 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lint-staged": "^7.2.2",
-    "ng-packagr": "^5.4.0",
+    "ng-packagr": "^9.0.0",
     "ng2-mock-component": "^0.1.1",
     "prettier": "^1.14.2",
     "protractor": "~5.4.0",
     "ts-node": "~5.0.1",
-    "tsickle": "^0.37.0",
-    "tslib": "^1.10.0",
     "tslint": "~5.20.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.8.3"
   }
 }
